--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     </title>
     <link
       rel="preload"
-      href="/fonts/cormorant-v11-latin_cyrillic-700.woff2"
+      href="fonts/cormorant-v11-latin_cyrillic-700.woff2"
       as="font"
       type="font/woff2"
       crossorigin
     />
-    <link rel="stylesheet" href="/style/normalize.css">
-    <link rel="stylesheet" href="/style/default.css" />
-    <link rel="stylesheet" href="/style/header.css">
-    <link rel="stylesheet" href="/style/burger.css">
-    <link rel="stylesheet" href="/style/navigation.css">
-    <link rel="stylesheet" href="/style/logo.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/default.css" />
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/burger.css">
+    <link rel="stylesheet" href="style/navigation.css">
+    <link rel="stylesheet" href="style/logo.css">
 
   </head>
   <body>
