--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style/burger.css">
     <link rel="stylesheet" href="style/navigation.css">
     <link rel="stylesheet" href="style/logo.css">
-
+    <link rel="stylesheet" href="style/hero.css">
   </head>
   <body>
     <header class="header">
@@ -51,8 +51,18 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="container">
-          <h1>Встречай Новый Год c прекрасной живой ёлочкой!</h1>
+        <div class="container hero__container">
+          <div class="hero__left">
+            <img class="hero__img" src="img/photo.jpg" width="705" height="769" alt="Красивая ель около камина">
+          </div>
+          <div class="hero__right">
+            <h1 class="hero__title">Встречай Новый Год c&nbsp; прекрасной живой ёлочкой!</h1>
+            <p class="hero__description">У нас в наличии только самые пушистые и свежие ёлки</p>
+            <a href="#one" class="hero__down">
+              <img class="hero__down-img" src="img/bauble.png" width="113" height="139">
+              <span>Заказать</span>
+            </a>
+          </div>
         </div>
       </section>
       <section class="feature">
